[package]
authors = ["Guanqun Lu <guanqunlu@outlook.com>"]
edition = "2018"
name = "solc-select"
description = "A tool to select solc version easily"
version = "0.2.0"
readme = "README.md"
license = "MIT"
keywords = ["solc", "ethereum"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = "2.33.3"
sys-info = "0.9.0"
reqwest = { version="0.11.3", features=["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
dirs = "3.0.1"
anyhow = "1.0"
