[package]
authors = ["Guanqun Lu <guanqunlu@outlook.com>"]
edition = "2021"
name = "solc-select"
description = "Allows users to install and quickly switch between Solidity compiler versions"
version = "0.4.0"
readme = "README.md"
license = "MIT"
keywords = ["solc", "ethereum"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
sys-info = "0.9.1"
ureq = { version = "2.6.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
dirs = "4.0.0"
anyhow = "1.0"
